--- a/styles/global.css
+++ b/styles/global.css
@@ -14,9 +14,9 @@
 }
 
 :root {
-  --fs-sora: font-family: "Sora", serif;
-  --fs-roboto-mono: font-family: "Roboto Mono", serif;
-  --fs-roboto-flex: font-family: "Roboto Flex", serif;
+  --ff-sora: "Sora", serif;
+  --ff-roboto-mono: "Roboto Mono", serif;
+  --ff-roboto-flex: "Roboto Flex", serif;
 
   --content-primary: #FFFFFF;
   --content-secondary: #C7C9CC;
@@ -40,15 +40,21 @@
   --gradient-bg: #D586E0 0%, #91A1FA 98.93%;
   --gradient-content: #C7C9CC 0%, #3D3D3D 100%;
 
-  --title-lg: 4.5rem/1.3 800;
-  --title-md: 2.5rem/1.3 800;
-  --title-sm: 2rem/1.3 700;
+  --title-lg: 800 4.5rem/1.3 var(--ff-sora);
+  --title-md: 800 2.5rem/1.3 var(--ff-sora);
+  --title-sm: 700 2rem/1.3 var(--ff-sora);
 
-  --overline: 1rem/1.5 700;
+  --overline: 700 1rem/1.5 var(--ff-roboto-mono);
 
-  --ph-lg: 1rem/1.5 500;
-  --ph-md: 0.875rem/1.5 500;
-  --ph-sm: 0.75rem/1.5 500;
-  --label-md: 1.25rem/1.5 700;
-  --label-sm: 1rem/1.5 700;
+  --ph-lg: 500 1rem/1.5 var(--ff-roboto-flex);
+  --ph-md: 500 0.875rem/1.5 var(--ff-roboto-flex);
+  --ph-sm: 500 0.75rem/1.5 var(--ff-roboto-flex);
+  --label-md: 700 1.25rem/1.5 var(--ff-roboto-flex);
+  --label-sm: 700 1rem/1.5 var(--ff-roboto-flex);
+
+  --px-base: 2rem;
+}
+
+body {
+  background-color: var(--bg-secondary);
 }
