--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,6 +1,6 @@
 .container {
   --max-width: 375px;
-  width: min(var(--max-width), 100% - var(--px-lg) * 2);
+  width: min(var(--max-width), 100% - 1.5rem * 2);
   margin-inline: auto;
 }
 
@@ -8,8 +8,16 @@
   padding-inline: var(--px-base);
 }
 
+.desktop-only {
+  display: none;
+}
+
 @media (width >= 80em) {
   .container {
     --max-width: 80rem;
+  }
+
+  .desktop-only {
+    display: initial;
   }
 }
