--- a/styles/global.css
+++ b/styles/global.css
@@ -37,7 +37,7 @@
   --accent-red: #E9A9B3;
 
   --gradient-border: #77C0AF 0%, #D1DC97 14.84%, #E9A9B3 32.15%, #D586E0 65.79%, #91A1FA 84.58%;
-  --gradient-bg: #D586E0 0%, #91A1FA 98.93%;
+  --gradient-bg: linear-gradient(to right, #D586E0 0%, #91A1FA 98.93%);
   --gradient-content: #C7C9CC 0%, #3D3D3D 100%;
 
   --title-lg: 800 4.5rem/1.3 var(--ff-sora);
