--- a/styles/drawer.css
+++ b/styles/drawer.css
@@ -30,6 +30,33 @@
       font: var(--ph-md);
     }
   }
+
+  & .button-wrapper {
+    margin-top: 2.5rem;
+
+    & button {
+      width: 100%;
+      border-radius: .5rem;
+      border: none;
+      padding: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: .5rem;
+      cursor: pointer;
+      background-color: var(--bg-tertiary);
+      color: #FFFFFF;
+      font: var(--label-sm);
+      text-transform: uppercase;
+    }
+
+    & button:hover {
+      background-color: var(--bg-secondary);
+      border: 1px solid transparent;
+      background: linear-gradient(#111012, #111012) padding-box,
+              linear-gradient(to right, var(--gradient-border)) border-box;
+    }
+  }
 }
 
 .input-wrapper {
