--- a/styles/drawer.css
+++ b/styles/drawer.css
@@ -100,6 +100,7 @@
     background: linear-gradient(#24222E, #24222E) padding-box,
               linear-gradient(to right, var(--gradient-border)) border-box;
   }
+
 }
 
 .draw-result {
@@ -171,6 +172,12 @@
 
     & .numbers {
       max-width: 482px;
+    }
+  }
+
+  #drawer-container{
+    #about {
+      display: none;
     }
   }
 }
